--- a/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/add-contratador/add-contratador.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/add-contratador/add-contratador.component.html
@@ -50,7 +50,7 @@
       }
 
 
-      <label for="Cont">Contraseña</label>
+      <label for="Cont">Contraseña*</label>
       <input type="password" id="Cont" class="input" formControlName="contrasenia">
       @if (formularioUsuarioContratador.controls["contrasenia"].touched && formularioUsuarioContratador.controls["contrasenia"].getError("required")){
         <div class="error">Campo obligatorio</div>
